autotests/syntax-tests-simple-refal/tests/negative/negative106.sref
Name { Name Name , Name Name : $ESWAP Name Name , : = : = ;
= ; } ; 